[package]
name = "gotcha"
version = "0.1.0"
authors = ["nnnamani <6526114+nnnamani@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rand = "0.7.3"

[dev-dependencies]
regex = "1"